--- a/ui/ui-accordion/ui-accordion.html
+++ b/ui/ui-accordion/ui-accordion.html
@@ -57,22 +57,24 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          &lt;ui-accordion id="accordion"&gt;&lt;/ui-accordion&gt;<br>
-          <br>
-          accordion.data = [{<br>
-          &nbsp;title:'What is Lorem?',<br>
-          &nbsp;content:'Lorem ipsum dolor sit amet...',<br>
-          &nbsp;expanded:true<br>
-          },{<br>
-          &nbsp;title:'Why use it?',<br>
-          &nbsp;content:'Lorem ipsum dolor sit amet...',<br>
-          &nbsp;disabled:true<br>
-          },{<br>
-          &nbsp;title:'Where to use?',<br>
-          &nbsp;content:'Lorem ipsum dolor sit amet...'<br>
-          }];
-        </code>
+
+<pre><code>
+&lt;ui-accordion id="accordion"&gt;&lt;/ui-accordion&gt;
+
+accordion.data = [{
+ title:'What is Lorem?',
+ content:'Lorem ipsum dolor sit amet...',
+ expanded:true
+},{
+ title:'Why use it?',
+ content:'Lorem ipsum dolor sit amet...',
+ disabled:true
+},{
+ title:'Where to use?',
+ content:'Lorem ipsum dolor sit amet...'
+}];
+</code></pre>
+
       </div>
     </div>
   </div>
