--- a/ui/ui-alert/ui-alert.html
+++ b/ui/ui-alert/ui-alert.html
@@ -60,13 +60,15 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          &lt;ui-alert id="alert" non-closable&gt;&lt;/ui-alert&gt;<br>
-          <br>
-          alert.data = {<br>
-          &nbsp;content: 'Your settings have been &lt;strong&gt;successfully&lt;/strong&gt; saved.'<br>
-          };
-        </code>
+
+<pre><code>
+&lt;ui-alert id="alert" non-closable&gt;&lt;/ui-alert&gt;
+
+alert.data = {
+ content: 'Your settings have been &lt;strong&gt;successfully&lt;/strong&gt; saved.'
+};
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -81,14 +83,16 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          &lt;ui-alert id="alert"&gt;&lt;/ui-alert&gt;<br>
-          <br>
-          alert.data = {<br>
-          &nbsp;title: 'Update Complete',<br>
-          &nbsp;content: 'Your settings have been &lt;strong&gt;successfully&lt;/strong&gt; saved.'<br>
-          };
-        </code>
+
+<pre><code>
+&lt;ui-alert id="alert"&gt;&lt;/ui-alert&gt;
+
+alert.data = {
+ title: 'Update Complete',
+ content: 'Your settings have been &lt;strong&gt;successfully&lt;/strong&gt; saved.'
+};
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -103,14 +107,16 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          &lt;ui-alert id="alert" icon="info"&gt;&lt;/ui-alert&gt;<br>
-          <br>
-          alert.data = {<br>
-          &nbsp;title: 'Update Complete',<br>
-          &nbsp;content: 'Your settings have been &lt;strong&gt;successfully&lt;/strong&gt; saved.'<br>
-          };
-        </code>
+
+<pre><code>
+&lt;ui-alert id="alert" icon="info"&gt;&lt;/ui-alert&gt;
+
+alert.data = {
+ title: 'Update Complete',
+ content: 'Your settings have been &lt;strong&gt;successfully&lt;/strong&gt; saved.'
+};
+</code></pre>
+
       </div>
     </div>
   </div>
