--- a/ui/ui-button/ui-button.html
+++ b/ui/ui-button/ui-button.html
@@ -72,13 +72,15 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          &lt;ui-button&gt;Button&lt;/ui-button&gt;<br>
-          <br>
-          &lt;ui-button aria-label="Button" icon-only&gt;<br>
-          &nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;<br>
-          &lt;/ui-button&gt;
-        </code>
+
+<pre><code>
+&lt;ui-button&gt;Button&lt;/ui-button&gt;
+
+&lt;ui-button aria-label="Button" icon-only&gt;
+  &lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;
+&lt;/ui-button&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -95,11 +97,15 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          &lt;ui-button&gt;Button&lt;/ui-button&gt;<br>
-          &lt;ui-button shape="pill"&gt;Button&lt;/ui-button&gt;<br>
-          &lt;ui-button shape="square"&gt;Button&lt;/ui-button&gt;
-        </code>
+
+<pre><code>
+&lt;ui-button&gt;Button&lt;/ui-button&gt;
+
+&lt;ui-button shape="pill"&gt;Button&lt;/ui-button&gt;
+
+&lt;ui-button shape="square"&gt;Button&lt;/ui-button&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -122,19 +128,21 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          &lt;ui-button aria-label="Button" icon-only&gt;<br>
-          &nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;<br>
-          &lt;/ui-button&gt;<br>
-          <br>
-          &lt;ui-button aria-label="Button" shape="circle" icon-only&gt;<br>
-          &nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;<br>
-          &lt;/ui-button&gt;<br>
-          <br>
-          &lt;ui-button aria-label="Button" shape="square" icon-only&gt;<br>
-          &nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;<br>
-          &lt;/ui-button&gt;
-        </code>
+
+<pre><code>
+&lt;ui-button aria-label="Button" icon-only&gt;
+&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;
+&lt;/ui-button&gt;
+
+&lt;ui-button aria-label="Button" shape="circle" icon-only&gt;
+&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;
+&lt;/ui-button&gt;
+
+&lt;ui-button aria-label="Button" shape="square" icon-only&gt;
+&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;
+&lt;/ui-button&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -156,17 +164,19 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          &lt;ui-button&gt;<br>
-          &nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;<br>
-          &nbsp;Button<br>
-          &lt;/ui-button&gt;<br>
-          <br>
-          &lt;ui-button&gt;<br>
-          &nbsp;Button<br>
-          &nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;<br>
-          &lt;/ui-button&gt;
-        </code>
+
+<pre><code>
+&lt;ui-button&gt;
+ &lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;
+ Button
+&lt;/ui-button&gt;
+
+&lt;ui-button&gt;
+ Button
+ &lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;
+&lt;/ui-button&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -181,9 +191,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          &lt;ui-button disabled&gt;Button&lt;/ui-button&gt;
-        </code>
+
+<pre><code>
+&lt;ui-button disabled&gt;Button&lt;/ui-button&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -199,18 +211,22 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          &lt;ui-button&gt;Start Loading&lt;/ui-button&gt;<br><br>
-          const buttonLoading = document.getElementById('loading');<br>
-          const buttonReset = document.getElementById('reset');<br><br>
 
-          buttonLoading.addEventListener('button-action',() =>{<br>
-          &nbsp;buttonLoading.loading = true;<br>
-          });<br><br>
-          buttonReset.addEventListener('button-action',() =>{<br>
-          &nbsp;buttonLoading.loading = false;<br>
-          });
-        </code>
+<pre><code>
+&lt;ui-button&gt;Start Loading&lt;/ui-button&gt;
+
+const buttonLoading = document.getElementById('loading');
+const buttonReset = document.getElementById('reset');
+
+buttonLoading.addEventListener('button-action',() =>{
+ buttonLoading.loading = true;
+});
+
+buttonReset.addEventListener('button-action',() =>{
+ buttonLoading.loading = false;
+});
+</code></pre>
+
       </div>
     </div>
   </div>
