--- a/ui/ui-icon/ui-icon.html
+++ b/ui/ui-icon/ui-icon.html
@@ -46,9 +46,11 @@
         <ui-button size="slim" theme="transparent" onclick="changeIconName()">REACTIVITY TEST</ui-button>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-icon icon="home"&gt;&lt;/ui-icon&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-icon icon="home"&gt;&lt;/ui-icon&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
