--- a/ui/ui-input/ui-input.html
+++ b/ui/ui-input/ui-input.html
@@ -81,9 +81,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-input&gt;&lt;/ui-input&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-input&gt;&lt;/ui-input&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -100,11 +102,15 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-input shape="rounded"&gt;&lt;/ui-input&gt;</div>
-          <div>&lt;ui-input shape="pill"&gt;&lt;/ui-input&gt;</div>
-          <div>&lt;ui-input shape="square"&gt;&lt;/ui-input&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-input shape="rounded"&gt;&lt;/ui-input&gt;
+
+&lt;ui-input shape="pill"&gt;&lt;/ui-input&gt;
+
+&lt;ui-input shape="square"&gt;&lt;/ui-input&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -119,9 +125,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-input clearable&gt;&lt;/ui-input&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-input clearable&gt;&lt;/ui-input&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -136,9 +144,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-input required&gt;&lt;/ui-input&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-input required&gt;&lt;/ui-input&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -153,9 +163,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-input placeholder="Placeholder"&gt;&lt;/ui-input&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-input placeholder="Placeholder"&gt;&lt;/ui-input&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -170,9 +182,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-input placeholder="Disabled" disabled&gt;&lt;/ui-input&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-input placeholder="Disabled" disabled&gt;&lt;/ui-input&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -187,9 +201,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-input value="Disabled" disabled&gt;&lt;/ui-input&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-input value="Disabled" disabled&gt;&lt;/ui-input&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
