--- a/ui/ui-select/ui-select.html
+++ b/ui/ui-select/ui-select.html
@@ -47,9 +47,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-select&gt;&lt;/ui-select&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-select&gt;&lt;/ui-select&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -66,9 +68,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-select&gt;&lt;/ui-select&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-select&gt;&lt;/ui-select&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -83,9 +87,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-select placeholder="Select"&gt;&lt;/ui-select&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-select placeholder="Select"&gt;&lt;/ui-select&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -100,9 +106,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-select disabled&gt;&lt;/ui-select&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-select disabled&gt;&lt;/ui-select&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
