--- a/ui/ui-separator/ui-separator.html
+++ b/ui/ui-separator/ui-separator.html
@@ -52,9 +52,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-separator&gt;&lt;/ui-separator&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-separator&gt;&lt;/ui-separator&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -69,9 +71,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-separator orientation="vertical"&gt;&lt;/ui-separator&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-separator orientation="vertical"&gt;&lt;/ui-separator&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
