--- a/ui/ui-spinner/ui-spinner.html
+++ b/ui/ui-spinner/ui-spinner.html
@@ -25,9 +25,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-spinner&gt;&lt;/ui-spinner&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-spinner&gt;&lt;/ui-spinner&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
