--- a/ui/ui-text/ui-text.html
+++ b/ui/ui-text/ui-text.html
@@ -25,9 +25,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-text&gt;Text&lt;/ui-text&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-text&gt;Text&lt;/ui-text&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
