--- a/ui/ui-textarea/ui-textarea.html
+++ b/ui/ui-textarea/ui-textarea.html
@@ -61,9 +61,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-textarea&gt;&lt;/ui-textarea&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-textarea&gt;&lt;/ui-textarea&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -78,9 +80,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-textarea width-mode="full"&gt;&lt;/ui-textarea&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-textarea width-mode="full"&gt;&lt;/ui-textarea&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -96,10 +100,13 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-textarea shape="rounded"&gt;&lt;/ui-textarea&gt;</div>
-          <div>&lt;ui-textarea shape="square"&gt;&lt;/ui-textarea&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-textarea shape="rounded"&gt;&lt;/ui-textarea&gt;
+
+&lt;ui-textarea shape="square"&gt;&lt;/ui-textarea&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -114,9 +121,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-textarea required&gt;&lt;/ui-textarea&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-textarea required&gt;&lt;/ui-textarea&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -131,9 +140,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          &lt;ui-textarea placeholder="Placeholder"&gt;&lt;/ui-textarea&gt;
-        </code>
+
+<pre><code>
+&lt;ui-textarea placeholder="Placeholder"&gt;&lt;/ui-textarea&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -148,9 +159,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          &lt;ui-textarea placeholder="Disabled" disabled&gt;&lt;/ui-textarea&gt;
-        </code>
+
+<pre><code>
+&lt;ui-textarea placeholder="Disabled" disabled&gt;&lt;/ui-textarea&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -165,9 +178,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          &lt;ui-textarea value="Disabled" disabled&gt;&lt;/ui-textarea&gt;
-        </code>
+
+<pre><code>
+&lt;ui-textarea value="Disabled" disabled&gt;&lt;/ui-textarea&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
