--- a/ui/ui-checkbox/ui-checkbox.html
+++ b/ui/ui-checkbox/ui-checkbox.html
@@ -52,9 +52,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-checkbox&gt;&lt;/ui-checkbox&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-checkbox&gt;&lt;/ui-checkbox&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -71,11 +73,13 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-checkbox shape="rounded"&gt;&lt;/ui-checkbox&gt;</div>
-          <div>&lt;ui-checkbox shape="circle"&gt;&lt;/ui-checkbox&gt;</div>
-          <div>&lt;ui-checkbox shape="square"&gt;&lt;/ui-checkbox&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-checkbox shape="rounded"&gt;&lt;/ui-checkbox&gt;
+&lt;ui-checkbox shape="circle"&gt;&lt;/ui-checkbox&gt;
+&lt;ui-checkbox shape="square"&gt;&lt;/ui-checkbox&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -90,9 +94,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-checkbox checked&gt;&lt;/ui-checkbox&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-checkbox checked&gt;&lt;/ui-checkbox&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -107,9 +113,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-checkbox disabled&gt;&lt;/ui-checkbox&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-checkbox disabled&gt;&lt;/ui-checkbox&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
