--- a/ui/ui-field/ui-field.html
+++ b/ui/ui-field/ui-field.html
@@ -52,12 +52,14 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-field&gt;</div>
-            <div>&nbsp;&nbsp;&lt;ui-label&gt;Label&lt;/ui-label&gt;</div>
-            <div>&nbsp;&nbsp;&lt;ui-checkbox&gt;&lt;/ui-checkbox&gt;</div>
-          <div>&lt;/ui-field&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-field&gt;
+ &lt;ui-label&gt;Label&lt;/ui-label&gt;
+ &lt;ui-checkbox&gt;&lt;/ui-checkbox&gt;
+&lt;/ui-field&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -75,12 +77,14 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-field label-position="end"&gt;</div>
-            <div>&nbsp;&nbsp;&lt;ui-label&gt;Label&lt;/ui-label&gt;</div>
-            <div>&nbsp;&nbsp;&lt;ui-switch&gt;&lt;/ui-switch&gt;</div>
-          <div>&lt;/ui-field&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-field label-position="end"&gt;
+ &lt;ui-label&gt;Label&lt;/ui-label&gt;
+ &lt;ui-switch&gt;&lt;/ui-switch&gt;
+&lt;/ui-field&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -98,12 +102,14 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-field&gt;</div>
-            <div>&nbsp;&nbsp;&lt;ui-label passive&gt;Label&lt;/ui-label&gt;</div>
-            <div>&nbsp;&nbsp;&lt;ui-switch&gt;&lt;/ui-switch&gt;</div>
-          <div>&lt;/ui-field&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-field&gt;
+ &lt;ui-label passive&gt;Label&lt;/ui-label&gt;
+ &lt;ui-switch&gt;&lt;/ui-switch&gt;
+&lt;/ui-field&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -121,12 +127,14 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-field required orientation="vertical"&gt;</div>
-            <div>&nbsp;&nbsp;&lt;ui-label&gt;Label&lt;/ui-label&gt;</div>
-            <div>&nbsp;&nbsp;&lt;ui-textarea&gt;&lt;/ui-textarea&gt;</div>
-          <div>&lt;/ui-field&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-field required orientation="vertical"&gt;
+ &lt;ui-label&gt;Label&lt;/ui-label&gt;
+ &lt;ui-textarea&gt;&lt;/ui-textarea&gt;
+&lt;/ui-field&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
