--- a/ui/ui-label/ui-label.html
+++ b/ui/ui-label/ui-label.html
@@ -51,9 +51,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-label&gt;Label&lt;/ui-label&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-label&gt;Label&lt;/ui-label&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -68,9 +70,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-label passive&gt;Label&lt;/ui-label&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-label passive&gt;Label&lt;/ui-label&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -85,9 +89,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-label required&gt;Label&lt;/ui-label&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-label required&gt;Label&lt;/ui-label&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -102,9 +108,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-label symbol="•" required&gt;Label&lt;/ui-label&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-label symbol="•" required&gt;Label&lt;/ui-label&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
