--- a/ui/ui-listbox/ui-listbox.html
+++ b/ui/ui-listbox/ui-listbox.html
@@ -37,9 +37,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-listbox&gt;&lt;/ui-listbox&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-listbox&gt;&lt;/ui-listbox&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
