--- a/ui/ui-switch/ui-switch.html
+++ b/ui/ui-switch/ui-switch.html
@@ -16,20 +16,17 @@
         Controls the checked state of the component.
       </li>
       <li>
-        required - static (optional).<br>
-        Indicates whether the component is required.
-      </li>
-      <li>
         disabled - reactive (optional).<br>
         Controls the disabled state of the component.
       </li>
       <li>
-        size - static (optional). Default: default.<br>
-        Specifies the component's size (extendable via CSS).
+        required - static (optional).<br>
+        Indicates whether the component is required.
       </li>
       <li>
-        theme - static (optional). Default: default.<br>
-        Specifies the component's color scheme (extendable via CSS).
+        shape - static (optional). Default: pill.<br>
+        Available options: pill, square.<br>
+        Sets the corner style.
       </li>
     </ul>
   </div>
@@ -47,9 +44,33 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-switch&gt;&lt;/ui-switch&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-switch&gt;&lt;/ui-switch&gt;
+</code></pre>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Shapes</div>
+    <div class="example">
+      <div class="preview">
+        <ui-switch></ui-switch>
+        <ui-switch shape="square"></ui-switch>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
+      <div class="code">
+
+<pre><code>
+&lt;ui-switch&gt;&lt;/ui-switch&gt;
+
+&lt;ui-switch shape="square"&gt;&lt;/ui-switch&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -64,9 +85,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-switch checked&gt;&lt;/ui-switch&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-switch checked&gt;&lt;/ui-switch&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
@@ -81,9 +104,11 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;ui-switch disabled&gt;&lt;/ui-switch&gt;</div>
-        </code>
+
+<pre><code>
+&lt;ui-switch disabled&gt;&lt;/ui-switch&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
