--- a/ui/ui-focus/ui-focus.html
+++ b/ui/ui-focus/ui-focus.html
@@ -23,6 +23,7 @@
 </section>
 
 <section class="content">
+
   <div class="content-item">
     <div>Placement</div>
     <div class="example">
@@ -30,13 +31,16 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          &lt;body&gt;<br>
-          &nbsp;&lt;ui-focus&gt;&lt;/ui-focus&gt;<br>
-          &nbsp;&lt;!-- Remaining code --&gt;<br>
-          &lt;/body&gt;
-        </code>
+
+<pre><code>
+&lt;body&gt;
+ &lt;ui-focus&gt;&lt;/ui-focus&gt;
+ &lt;!-- Remaining code --&gt;
+&lt;/body&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
+
 </section>
