--- a/ui/ui-portal/ui-portal.html
+++ b/ui/ui-portal/ui-portal.html
@@ -30,12 +30,14 @@
         <span>HTML</span>
       </div>
       <div class="code">
-        <code>
-          <div>&lt;body&gt;</div>
-          <div>&nbsp;&lt;!-- Preceding code --&gt;</div>
-          <div>&nbsp;&lt;ui-portal&gt;&lt;/ui-portal&gt;</div>
-          <div>&lt;/body&gt;</div>
-        </code>
+
+<pre><code>
+&lt;body&gt;
+ &lt;!-- Preceding code --&gt;
+ &lt;ui-portal&gt;&lt;/ui-portal&gt;
+&lt;/body&gt;
+</code></pre>
+
       </div>
     </div>
   </div>
