--- a/ui/ui-checkbox/ui-checkbox.html
+++ b/ui/ui-checkbox/ui-checkbox.html
@@ -5,6 +5,14 @@
 
 <section class="details">
   <div class="info">
+    <h2>Usage</h2>
+    <ul>
+      <li>
+        This component is designed to work with the <a href="#ui-icon">ui-icon</a> component for rendering icons.
+      </li>
+    </ul>
+  </div>
+  <div class="info">
     <h2>Attributes</h2>
     <ul>
       <li>
@@ -27,14 +35,6 @@
         shape - static (optional). Default: rounded.<br>
         Available options: rounded, circle, square.<br>
         Sets the corner style.
-      </li>
-      <li>
-        size - static (optional). Default: default.<br>
-        Specifies the component's size (extendable via CSS).
-      </li>
-      <li>
-        theme - static (optional). Default: default.<br>
-        Specifies the component's color scheme (extendable via CSS).
       </li>
     </ul>
   </div>
