--- a/ui/ui-separator/ui-separator.html
+++ b/ui/ui-separator/ui-separator.html
@@ -24,17 +24,8 @@
     <h2>Attributes</h2>
     <ul>
       <li>
-        orientation - static (optional). Default: horizontal.<br>
-        Available options: horizontal, vertical.<br>
-        Defines the separator direction.
-      </li>
-      <li>
-        size - static (optional). Default: default.<br>
-        Specifies the component's size (extendable via CSS).
-      </li>
-      <li>
-        theme - static (optional). Default: default.<br>
-        Specifies the component's color scheme (extendable via CSS).
+        vertical - static.<br>
+        Sets the separator orientation to vertical.
       </li>
     </ul>
   </div>
@@ -65,7 +56,7 @@
     <div>Vertical separator</div>
     <div class="example">
       <div class="preview" style="height:200px;">
-        <ui-separator orientation="vertical"></ui-separator>
+        <ui-separator vertical></ui-separator>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -73,7 +64,7 @@
       <div class="code">
 
 <pre><code>
-&lt;ui-separator orientation="vertical"&gt;&lt;/ui-separator&gt;
+&lt;ui-separator vertical&gt;&lt;/ui-separator&gt;
 </code></pre>
 
       </div>
