--- a/ui/ui-accordion/ui-accordion.html
+++ b/ui/ui-accordion/ui-accordion.html
@@ -61,18 +61,11 @@
 <pre><code>
 &lt;ui-accordion id="accordion"&gt;&lt;/ui-accordion&gt;
 
-accordion.data = [{
- title:'What is Lorem?',
- content:'Lorem ipsum dolor sit amet...',
- expanded:true
-},{
- title:'Why use it?',
- content:'Lorem ipsum dolor sit amet...',
- disabled:true
-},{
- title:'Where to use?',
- content:'Lorem ipsum dolor sit amet...'
-}];
+accordion.data = [
+ {title:'What is Lorem?',content:'Lorem ipsum dolor sit amet...',expanded:true},
+ {title:'Why use it?',content:'Lorem ipsum dolor sit amet...',disabled:true},
+ {title:'Where to use?',content:'Lorem ipsum dolor sit amet...'}
+];
 </code></pre>
 
       </div>
@@ -84,18 +77,11 @@ accordion.data = [{
 <script defer>
 (() => {
 
-  accordion.data = [{
-  title:'What is Lorem?',
-  content:'Lorem ipsum dolor sit amet...',
-  expanded:true
-  },{
-  title:'Why use it?',
-  content:'Lorem ipsum dolor sit amet...',
-  disabled:true
-  },{
-  title:'Where to use?',
-  content:'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <u>quis nostrud exercitation</u> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
-  }];
+  accordion.data = [
+    {title:'What is Lorem?',content:'Lorem ipsum dolor sit amet...',expanded:true},
+    {title:'Why use it?',content:'Lorem ipsum dolor sit amet...',disabled:true},
+    {title:'Where to use?',content:'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <u>quis nostrud exercitation</u> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'}
+  ];
 
 })();
 </script>
