--- a/ui/ui-accordion/ui-accordion.html
+++ b/ui/ui-accordion/ui-accordion.html
@@ -31,7 +31,7 @@
       </li>
       <li>
         content - required.<br>
-        The HTML or text content shown inside the expanded panel.
+        The HTML or text content shown inside the panel.
       </li>
       <li>
         disabled - optional.<br>
