--- a/ui/ui-accordion/ui-accordion.html
+++ b/ui/ui-accordion/ui-accordion.html
@@ -8,14 +8,6 @@
     <h2>Attributes</h2>
     <ul>
       <li>
-        size - static (optional). Default: default.<br>
-        Specifies the component's sizes (extendable via CSS).
-      </li>
-      <li>
-        theme - static (optional). Default: default.<br>
-        Specifies the component's color scheme (extendable via CSS).
-      </li>
-      <li>
         shape - static (optional). Default: rounded.<br>
         Available options: rounded, square.<br>
         Sets the corner style.
@@ -26,12 +18,12 @@
     <h2>Object properties</h2>
     <ul>
       <li>
-        title - required.<br>
+        label - required.<br>
         The text displayed in the accordion header.
       </li>
       <li>
         content - required.<br>
-        The HTML or text content shown inside the panel.
+        Additional panel content, which can include plain text or HTML markup.
       </li>
       <li>
         disabled - optional.<br>
@@ -62,9 +54,9 @@
 &lt;ui-accordion id="accordion"&gt;&lt;/ui-accordion&gt;
 
 accordion.data = [
- {title:'What is Lorem?',content:'Lorem ipsum dolor sit amet...',expanded:true},
- {title:'Why use it?',content:'Lorem ipsum dolor sit amet...',disabled:true},
- {title:'Where to use?',content:'Lorem ipsum dolor sit amet...'}
+ {label:'What is Lorem?',content:'Lorem ipsum dolor sit amet...',expanded:true},
+ {label:'Why use it?',content:'Lorem ipsum dolor sit amet...',disabled:true},
+ {label:'Where to use?',content:'Lorem ipsum dolor sit amet...'}
 ];
 </code></pre>
 
@@ -78,9 +70,9 @@ accordion.data = [
 (() => {
 
   accordion.data = [
-    {title:'What is Lorem?',content:'Lorem ipsum dolor sit amet...',expanded:true},
-    {title:'Why use it?',content:'Lorem ipsum dolor sit amet...',disabled:true},
-    {title:'Where to use?',content:'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <u>quis nostrud exercitation</u> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'}
+    {label:'What is Lorem?',content:'Lorem ipsum dolor sit amet...',expanded:true},
+    {label:'Why use it?',content:'Lorem ipsum dolor sit amet...',disabled:true},
+    {label:'Where to use?',content:'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <u>quis nostrud exercitation</u> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'}
   ];
 
 })();
